--- a/pahal.html
+++ b/pahal.html
@@ -61,7 +61,7 @@
             font-weight: 200;
         }
         #header{
-            position: relative !important;
+            position: fixed;
         }
     </style>
 
