--- a/event.html
+++ b/event.html
@@ -163,7 +163,7 @@
                                 <span class="date-Text">Time: </span> <span class="des-text-apne">5:00 PM</span>
                                 <br>
 
-                                <button type="button" class="btn btn-outline-secondary" >Know
+                                <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#mymodel" >Know
                   More</button>
                             </p>
                         </div>
@@ -183,7 +183,7 @@
                                 <span class="date-Text">Time: </span> <span class="des-text-apne">6:00 PM</span>
                                 <br>
 
-                                <button type="button" class="btn btn-outline-secondary" >Know
+                                <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#mymodel1" >Know
                   More</button>
                             </p>
                         </div>
@@ -203,7 +203,7 @@
                                 <span class="date-Text">Time: </span> <span class="des-text-apne">4:00 PM</span>
 
                                 <br>
-                                <button type="button" class="btn btn-outline-secondary" >Know
+                                <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#mymodel2"  >Know
                     More</button>
                             </p>
                         </div>
@@ -293,8 +293,7 @@
                                     Round 3: Social Media Hunt<br> Participants will have to find components on social media using the hints provided and perform the given task in the minimum time.
                                 </li>
                                 <p>
-                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfmo3_TJTc3t7uzCF5HOROTycHDuYaZ8k-pf5-jKvxlsDIUSg/viewform?usp=sf_link" class="mt-3 btn btn-sm btn-outline-secondary text-light" target="_blank">
-                  Register here</a>
+                                    
                                 </p>
                             </ul>
                         </p>
@@ -336,8 +335,7 @@
                                     <br> Instant Innovation, in a nutshell, means raising start-up from the news. It will provide the contestants an opportunity to think about how to find a problem, ideate its solution, and pitch.
                                 </li>
                                 <p>
-                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScxim96GJ-PPzsGSZtFJTt4P-XWMLOMgGYNoqkUFO394ZaLFQ/viewform?usp=sf_link" class="mt-3 btn btn-sm btn-outline-secondary text-light" target="_blank">
-                  Register here</a>
+                                    
                                 </p>
                             </ul>
                             <br>
