--- a/nithvr.html
+++ b/nithvr.html
@@ -144,7 +144,7 @@
                     </li>
                     <li><a href="#">Games</a>
                     <li><a href="binary.html">Bit-N-Byte</a></li>
-                    <li><a href="/index.html#footer">Contact Us</a></li>
+                    <li><a href="index.html#footer">Contact Us</a></li>
 
 
                 </ul>
