added right colors

--- a/projects.html
+++ b/projects.html
@@ -236,7 +236,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4 col-sm-12 col-xs-12 portfolio-item filter-es">
-                    <article class="itembox material-card Grey">
+                    <article class="itembox material-card Blue-Grey">
                         <h2>
                             <span>Smart Solar</span>
                             <strong>
@@ -268,7 +268,7 @@
                     </article>
                 </div>
                 <div class="col-md-6 col-lg-4 col-sm-12 col-xs-12 portfolio-item filter-es">
-                    <article class="itembox material-card Brown">
+                    <article class="itembox material-card Blue-Grey">
                         <h2>
                             <span>Smart Entry System</span>
                             <strong>
@@ -302,7 +302,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4 col-sm-12 col-xs-12 portfolio-item filter-Ai-ml">
-                    <div class="material-card Blue-Grey">
+                    <div class="material-card Grey">
                         <h2>
                             <span>C.A.R.T.</span>
                             <strong>
@@ -334,7 +334,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4 col-sm-12 col-xs-12 portfolio-item filter-iot">
-                    <article class="itembox material-card Brown">
+                    <article class="itembox material-card Teal">
                         <h2>
                             <span>Swarm Bot</span>
                             <strong>
@@ -369,7 +369,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4 col-sm-12 col-xs-12 portfolio-item filter-Ai-ml">
-                    <article class="itembox material-card Teal">
+                    <article class="itembox material-card Grey">
                         <h2>
                             <span>Anti-Depression Bot</span>
                             <strong>
@@ -402,7 +402,7 @@
                     </article>
                 </div>
                 <div class="col-md-6 col-lg-4 col-sm-12 col-xs-12 portfolio-item filter-Ai-ml">
-                    <article class="itembox material-card Blue-Grey">
+                    <article class="itembox material-card Grey">
                         <h2>
                             <span>Top-Crop Farm Bot</span>
                             <strong>
@@ -434,7 +434,7 @@
                     </article>
                 </div>
                 <div class="col-md-6 col-lg-4 col-sm-12 col-xs-12 portfolio-item filter-ar">
-                    <article class="itembox material-card Blue-Grey">
+                    <article class="itembox material-card Brown">
                         <h2>
                             <span>AR Math Visualizer</span>
                             <strong>
