--- a/internexperience.html
+++ b/internexperience.html
@@ -301,7 +301,7 @@
                         <br>
                         <br> For more details check out his intern talk on YouTube.
                         <br>
-                        <a href="https://youtu.be/6ma1RegppB8" target="_blank" class="instagram"><i
+                        <a href="https://youtu.be/6ma1RegppB8?t=84" target="_blank" class="instagram"><i
                                 class="fab fa-youtube"></i>&emsp;What they say?</a>
                     </p>
                 </div>
@@ -330,7 +330,7 @@
                         them.
                         <br><br> For more details check out his full intern talk on YouTube.
                         <br>
-                        <a href="https://youtu.be/6ma1RegppB87" target="_blank" class="instagram"><i
+                        <a href="https://youtu.be/6ma1RegppB87?t=815" target="_blank" class="instagram"><i
                                 class="fab fa-youtube"></i>&emsp;What they say?</a>
                     </p>
                 </div>
@@ -362,7 +362,7 @@
                         institution can help further in our career.
                         <br><br> For more details check out her intern talk on YouTube.
                         <br>
-                        <a href="https://youtu.be/6ma1RegppB829" target="_blank" class="instagram"><i
+                        <a href="https://youtu.be/6ma1RegppB829?t=1628" target="_blank" class="instagram"><i
                                 class="fab fa-youtube"></i>&emsp;What they say?</a>
                     </p>
                 </div>
@@ -389,7 +389,7 @@
                         placements.
                         <br><br> For more details check out her intern talk on YouTube:
                         <br>
-                        <a href="https://youtu.be/6ma1RegppB872" target="_blank" class="instagram"><i
+                        <a href="https://youtu.be/6ma1RegppB872?t=2471" target="_blank" class="instagram"><i
                                 class="fab fa-youtube"></i>&emsp;What they say?</a>
                     </p>
                     <br>
