--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
-  <!-- <script src="js/particles.js"></script> -->
+  <script src="js/particles.js"></script>
   <script src="js/app.js"></script>
   <script type="text/javascript">
     $(window).load(function () {
