added write css and time stamps

--- a/internexperience.html
+++ b/internexperience.html
@@ -37,15 +37,6 @@
     <!-- Main Stylesheet File -->
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="css/button.css">
-    <style>
-        .main-nav a:hover{
-            color:#1e1c29 !important;
-        }
-
-        .main-nav .drop-down ul a{
-            color:white !important;
-        } 
-    </style>
 </head>
 
 <body onload="myfunction()">
@@ -301,7 +292,7 @@
                         <br>
                         <br> For more details check out his intern talk on YouTube.
                         <br>
-                        <a href="https://youtu.be/6ma1RegppB8" target="_blank" class="instagram"><i
+                        <a href="https://youtu.be/6ma1RegppB8?t=84" target="_blank" class="instagram"><i
                                 class="fab fa-youtube"></i>&emsp;What they say?</a>
                     </p>
                 </div>
@@ -330,7 +321,7 @@
                         them.
                         <br><br> For more details check out his full intern talk on YouTube.
                         <br>
-                        <a href="https://youtu.be/6ma1RegppB87" target="_blank" class="instagram"><i
+                        <a href="https://youtu.be/6ma1RegppB87?t=815" target="_blank" class="instagram"><i
                                 class="fab fa-youtube"></i>&emsp;What they say?</a>
                     </p>
                 </div>
@@ -362,7 +353,7 @@
                         institution can help further in our career.
                         <br><br> For more details check out her intern talk on YouTube.
                         <br>
-                        <a href="https://youtu.be/6ma1RegppB829" target="_blank" class="instagram"><i
+                        <a href="https://youtu.be/6ma1RegppB829?t=1628" target="_blank" class="instagram"><i
                                 class="fab fa-youtube"></i>&emsp;What they say?</a>
                     </p>
                 </div>
@@ -389,7 +380,7 @@
                         placements.
                         <br><br> For more details check out her intern talk on YouTube:
                         <br>
-                        <a href="https://youtu.be/6ma1RegppB872" target="_blank" class="instagram"><i
+                        <a href="https://youtu.be/6ma1RegppB872?t=2471" target="_blank" class="instagram"><i
                                 class="fab fa-youtube"></i>&emsp;What they say?</a>
                     </p>
                     <br>
