--- a/alumni.html
+++ b/alumni.html
@@ -55,14 +55,14 @@
         <div id="topbar">
             <div class="container">
                 <div class="social-links">
-                    <a href="https://www.instagram.com/team_vibhav/" class="instagram"><i
+                    <a href="https://www.instagram.com/team_vibhav/" target="_blank" class="instagram"><i
                             class="fab fa-instagram"></i></a>
-                    <a href="https://www.facebook.com/teamvibhavece" class="facebook"><i
+                    <a href="https://www.facebook.com/teamvibhavece" target="_blank" class="facebook"><i
                             class="fab fa-facebook"></i></a>
 
-                    <a href="https://www.linkedin.com/in/team-vibhav-6643b4206/" class="linkedin"><i
+                    <a href="https://www.linkedin.com/in/team-vibhav-6643b4206/" target="_blank" class="linkedin"><i
                             class="fab fa-linkedin"></i></a>
-                    <a href="https://youtube.com/channel/UCt8W-_urFuy3dqulfQvk8fQ" class="instagram"><i
+                    <a href="https://youtube.com/channel/UCt8W-_urFuy3dqulfQvk8fQ" target="_blank" class="instagram"><i
                             class="fab fa-youtube"></i></a>
                 </div>
             </div>
