--- a/nithvr.html
+++ b/nithvr.html
@@ -169,7 +169,7 @@
                 </div>
                 <div class="col-lg-3 cta-btn-container text-center">
                     <a class="align-middle prob-state "
-                        href="https://drive.google.com/drive/u/0/folders/1ZfXrfy7NEbjs87osTsHeeYRwts_9CMgH"><span></span><span></span><span></span><span></span>Download
+                        href="https://drive.google.com/drive/u/0/folders/1ZfXrfy7NEbjs87osTsHeeYRwts_9CMgH"  target="_blank"><span></span><span></span><span></span><span></span>Download
                     </a>
                 </div>
             </div>
