Bug fixed team favicon visible

--- a/binary.html
+++ b/binary.html
@@ -49,14 +49,14 @@
 		href="https://games.penjee.com/binary-numbers-game/extra/apple-icon-152x152.png">
 	<link rel="apple-touch-icon" sizes="180x180"
 		href="https://games.penjee.com/binary-numbers-game/extra/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192"
+	<!-- <link rel="icon" type="image/png" sizes="192x192"
 		href="https://games.penjee.com/binary-numbers-game/extra/android-icon-192x192.png">
 	<link rel="icon" type="image/png" sizes="32x32"
 		href="https://games.penjee.com/binary-numbers-game/extra/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="96x96"
 		href="https://games.penjee.com/binary-numbers-game/extra/favicon-96x96.png">
 	<link rel="icon" type="image/png" sizes="16x16"
-		href="https://games.penjee.com/binary-numbers-game/extra/favicon-16x16.png">
+		href="https://games.penjee.com/binary-numbers-game/extra/favicon-16x16.png"> -->
 	<link rel="manifest" href="https://games.penjee.com/binary-numbers-game/extra/manifest.json">
 	<link rel="stylesheet" href="css/binary.css">
 	<meta name="msapplication-TileColor" content="#ffffff">
