toggle button visible

--- a/team.html
+++ b/team.html
@@ -40,11 +40,11 @@
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" target="_blank" href="css/button.css">
     <link rel="stylesheet" target="_blank" href="../dist/material-cards.css">
-    <style>
+    <!-- <style>
         .slick-arrow{
             display: none !important;
         }
-    </style>
+    </style> -->
 </head>
 
 <body>
