--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
   </footer>
   <!-- #footer -->
 
-  <!-- <a href="#" class="back-to-top"><i class="fas fa-arrow-up"></i></a> -->
+  <a href="#" class="back-to-top"><i class="fas fa-arrow-up"></i></a>
 
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/jquery/jquery-migrate.min.js"></script>
