#11 issue solved the-centinal
solved by writing some lines of javascript for preloader to disappear

--- a/diy.html
+++ b/diy.html
@@ -534,6 +534,16 @@
     <!-- Template Main Javascript File -->
     <script src="js/main.js"></script>
 
+    <script>
+        var preloader = document.getElementById('loading');
+
+        function myfunction() {
+            preloader.style.display = 'none'
+        }
+        
+    
+    </script>
+
 </body>
 
 </html>
