--- a/nithvr.html
+++ b/nithvr.html
@@ -142,8 +142,12 @@
                             <li><a href="nithvr.html">NITH VR</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Games</a>
-                    <li><a href="binary.html">Bit-N-Byte</a></li>
+                    <li class="drop-down"><a href="#">Games</a>
+                        <ul>
+                            <li><a href="binary.html">Bit-N-Byte</a></li>
+                        </ul> 
+                    </li>
+        
                     <li><a href="index.html#footer">Contact Us</a></li>
 
 
