--- a/team.html
+++ b/team.html
@@ -1609,22 +1609,22 @@
             dots: true,
             infinite: true,
             speed: 300,
-            autoplay: false,
-            slidesToShow: 3,
-            slidesToScroll: 10,
+            autoplay: true,
+            slidesToShow: 4,
+            slidesToScroll: 4,
             responsive: [{
                 breakpoint: 1024,
                 settings: {
-                    slidesToShow: 1,
-                    slidesToScroll: 1,
+                    slidesToShow: 3,
+                    slidesToScroll: 3,
                     infinite: true,
                     dots: true
                 }
             }, {
                 breakpoint: 600,
                 settings: {
-                    slidesToShow: 1,
-                    slidesToScroll: 1
+                    slidesToShow: 2,
+                    slidesToScroll: 2
                 }
             }, {
                 breakpoint: 480,
