--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
 
           <div class="col-lg-8">
             <h1 class="h3 mb-3 font-weight-normal text-center text-light">Contact Us</h1>
-            <form action="https://formspree.io/f/mvovygen" class="form-signin" method="GET">
+            <form action="https://formspree.io/f/mvovygen" class="form-signin" method="POST">
               <label for="inputEmail" class="sr-only">Email address</label>
               <input name="email" type="email" id="inputEmail" class="form-control mb-3"
                 required>
