--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
         <h1 class="text-success site-title"><a href="#intro" class="scrollto">VIBHAV</a></h1>
       </div>
 
-      <nav class="main-nav float-right d-none d-lg-block">
+      <nav class="main-nav float-right d-none d-lg-block ">
         <ul>
-          <li class="active"><a href="#particles-js">Home</a></li>
+          <li class="nav-link active"><a href="#particles-js">Home</a></li>
           <li><a href="#about">About Us</a></li>
           <li class="drop-down"><a href="team.html">Our Team</a>
             <ul>
