--- a/nithvr.html
+++ b/nithvr.html
@@ -87,72 +87,62 @@
     <div id="loading">
 
     </div>
-    <!--==========================
+      
+  <!--==========================
   Header
   ============================-->
-    <header id="header">
-
-        <div id="topbar">
-            <div class="container">
-                <div class="social-links">
-                    <a target="_blank" href="https://www.instagram.com/team_vibhav/" class="instagram"><i
-                            class="fab fa-instagram"></i></a>
-                    <a target="_blank" href="https://www.facebook.com/teamvibhavece" class="facebook"><i
-                            class="fab fa-facebook"></i></a>
-
-                    <a target="_blank" href="https://www.linkedin.com/in/team-vibhav-6643b4206/" class="linkedin"><i
-                            class="fab fa-linkedin"></i></a>
-                    <a target="_blank" href="https://youtube.com/channel/UCt8W-_urFuy3dqulfQvk8fQ" class="instagram"><i
-                            class="fab fa-youtube"></i></a>
-                </div>
-            </div>
+  <header id="header" class="aksh">
+    <div id="topbar">
+      <div class="container">
+        <div class="social-links">
+          <a href="https://www.instagram.com/team_vibhav/" target="_blank" class="instagram"><i
+              class="fab fa-instagram"></i></a>
+          <a href="https://www.facebook.com/teamvibhavece" target="_blank" class="facebook"><i
+              class="fab fa-facebook"></i></a>
+          <a href="https://www.linkedin.com/company/team-vibhav/" target="_blank" class="linkedin"><i
+              class="fab fa-linkedin"></i></a>
+          <a href="https://youtube.com/channel/UCt8W-_urFuy3dqulfQvk8fQ" target="_blank" class="instagram"><i
+              class="fab fa-youtube"></i></a>
         </div>
+      </div>
+    </div>
 
-        <div class="container">
+    <div class="container pb-4">
 
-            <div class="logo float-left">
-                <h1 class="text-success site-title"><a href="index.html#intro" class="scrollto">VIBHAV</a></h1>
-            </div>
+      <div class="logo float-left ">
+        <h1 class="text-success site-title"><a href="#intro" class="scrollto">VIBHAV</a></h1>
+      </div>
 
-            <nav class="bug main-nav float-right d-none d-lg-block">
-                <ul>
-                    <li class="active"><a href="index.html#intro">Home</a></li>
-                    <li><a href="/index.html#about">About Us</a></li>
+      <nav class="main-nav float-right d-none d-lg-block ">
+        <ul>
+          <li class="nav-link active"><a href="#particles-js">Home</a></li>
+          <li><a href="#about">About Us</a></li>
+          <li class="drop-down"><a href="team.html">Our Team</a>
+            <ul>
+              <li><a href="team.html">Our Team</a></li>
+              <li><a href="internexperience.html">Intern Experiences</a></li>
+              <li><a href="alumni.html">Alumni</a></li>
+            </ul>
+          </li>
+          <li class="drop-down"><a href="projects.html">Our Work</a>
+            <ul>
+              <li><a href="projects.html">Projects</a></li>
+              <li><a href="event.html">Events </a></li>
+              <li><a href="workshop.html">Workshops </a></li>
+              <li><a href="pahal.html">Pahal </a></li>
+              <li><a href="diy.html">DIY Projects </a></li>
+              <li><a href="nithvr.html">NITH VR</a></li>
+            </ul>
+          </li>
+          <li class="drop-down"><a href="#">Games</a>
+            <ul>
+              <li><a href="binary.html">Bit-N-Byte</a></li>
+            </ul>
+          </li>
+          <li><a href="#footer">Contact Us</a></li>
+        </ul>
+      </nav>
 
-
-
-                    <li class="drop-down"><a href="">Our Team</a>
-                        <ul>
-
-                            <li><a href="team.html">Our Team</a></li>
-                            <li><a href="internexperience.html">Intern Experiences</a></li>
-                            <li><a href="alumni.html">Alumni</a></li>
-
-
-
-                        </ul>
-                    </li>
-                    <li class="drop-down"><a href="">Our Work</a>
-                        <ul>
-                            <li><a href="projects.html">Projects</a></li>
-                            <li><a href="event.html">Events </a></li>
-                            <li><a href="workshop.html">Workshops </a></li>
-                            <li><a href="pahal.html">Pahal </a></li>
-                            <li><a href="diy.html">DIY Projects </a></li>
-                            <li><a href="nithvr.html">NITH VR</a></li>
-                        </ul>
-                    </li>
-                    <li class="drop-down"><a href="#">Games</a>
-                        <ul>
-                            <li><a href="binary.html">Bit-N-Byte</a></li>
-                        </ul> 
-                    </li>
-        
-                    <li><a href="index.html#footer">Contact Us</a></li>
-
-
-                </ul>
-            </nav>
             <!-- .main-nav -->
 
             <script type="text/javascript">
