#2 issue solved the-centinal
added font awesome kit link

--- a/alumni.html
+++ b/alumni.html
@@ -41,6 +41,7 @@
             background-image: linear-gradient(to right, rgb(30, 28, 41), rgb(30, 28, 41)) !important;
         }
     </style>
+    <script src="https://kit.fontawesome.com/6829426eec.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
