--- a/projects.html
+++ b/projects.html
@@ -66,6 +66,7 @@
             font-family: 'Roboto', sans-serif;
         }
     </style>
+    <script src="https://kit.fontawesome.com/6829426eec.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
