--- a/team.html
+++ b/team.html
@@ -40,11 +40,14 @@
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" target="_blank" href="css/button.css">
     <link rel="stylesheet" target="_blank" href="../dist/material-cards.css">
+    <script src="https://kit.fontawesome.com/6829426eec.js" crossorigin="anonymous"></script>
     <!-- <style>
         .slick-arrow{
             display: none !important;
         }
     </style> -->
+
+    <script src="https://kit.fontawesome.com/6829426eec.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
