--- a/workshop.html
+++ b/workshop.html
@@ -42,6 +42,8 @@
         }
     </style>
 
+<script src="https://kit.fontawesome.com/6829426eec.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
