--- a/event.html
+++ b/event.html
@@ -38,6 +38,8 @@
         }
     </style>
 
+    <script src="https://kit.fontawesome.com/6829426eec.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
