--- a/internexperience.html
+++ b/internexperience.html
@@ -37,6 +37,8 @@
     <!-- Main Stylesheet File -->
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="css/button.css">
+
+    <script src="https://kit.fontawesome.com/6829426eec.js" crossorigin="anonymous"></script>
 </head>
 
 <body onload="myfunction()">
