--- a/nithvr.html
+++ b/nithvr.html
@@ -39,6 +39,8 @@
     <!-- Main Stylesheet File -->
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="css/button.css">
+
+    <script src="https://kit.fontawesome.com/6829426eec.js" crossorigin="anonymous"></script>
     <style>
         body {
             background-image: url('img/nithvr.webp') !important;
