--- a/pahal.html
+++ b/pahal.html
@@ -76,6 +76,8 @@
             font-family: 'Roboto', sans-serif;
         }
     </style>
+
+<script src="https://kit.fontawesome.com/6829426eec.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="bug">
