Added Active Class

--- a/alumni.html
+++ b/alumni.html
@@ -87,13 +87,13 @@
 
 
 
-                    <li class="drop-down"><a href="team.html">Our Team</a>
+                    <li class="active drop-down"><a href="team.html">Our Team</a>
                         <ul>
 
 
                             <li><a href="team.html">Our Team</a></li>
                             <li><a href="internexperience.html">Intern Experiences</a></li>
-                            <li><a href="alumni.html">Alumni</a></li>
+                            <li class="active"><a href="alumni.html">Alumni</a></li>
 
 
                         </ul>
