--- a/diy.html
+++ b/diy.html
@@ -74,7 +74,7 @@
 
             <nav class="main-nav float-right d-none d-lg-block">
                 <ul>
-                    <li class="active"><a href="index.html#intro">Home</a></li>
+                    <li><a href="index.html#intro">Home</a></li>
                     <li><a href="/index.html#about">About Us</a></li>
 
 
@@ -90,7 +90,7 @@
 
                         </ul>
                     </li>
-                    <li class="drop-down"><a href="">Our Work</a>
+                    <li class="active drop-down"><a href="">Our Work</a>
                         <ul>
 
 
@@ -98,7 +98,7 @@
                             <li><a href="event.html">Events </a></li>
                             <li><a href="workshop.html">Workshops </a></li>
                             <li><a href="pahal.html">Pahal </a></li>
-                            <li><a href="diy.html">DIY Projects </a></li>
+                            <li class="active"><a href="diy.html">DIY Projects </a></li>
                             <li><a href="nithvr.html">NITH Vr </a></li>
                         </ul>
                     </li>
