--- a/event.html
+++ b/event.html
@@ -76,7 +76,7 @@
 
             <nav class="main-nav float-right d-none d-lg-block">
                 <ul>
-                    <li class="active"><a href="index.html#intro">Home</a></li>
+                    <li><a href="index.html#intro">Home</a></li>
                     <li><a href="index.html#about">About Us</a></li>
 
 
@@ -94,12 +94,12 @@
 
                         </ul>
                     </li>
-                    <li class="drop-down"><a href="#">Our Work</a>
+                    <li class="active drop-down"><a href="#">Our Work</a>
                         <ul>
 
 
                             <li><a href="projects.html">Projects</a></li>
-                            <li><a href="event.html">Events</a></li>
+                            <li class="active"><a href="event.html">Events</a></li>
                             <li><a href="workshop.html">Workshops</a></li>
                             <li><a href="pahal.html">Pahal </a></li>
                             <li><a href="diy.html">DIY Projects </a></li>
