--- a/nithvr.html
+++ b/nithvr.html
@@ -118,7 +118,7 @@
 
             <nav class="bug main-nav float-right d-none d-lg-block">
                 <ul>
-                    <li class="active"><a href="index.html#intro">Home</a></li>
+                    <li><a href="index.html#intro">Home</a></li>
                     <li><a href="/index.html#about">About Us</a></li>
 
 
@@ -134,14 +134,14 @@
 
                         </ul>
                     </li>
-                    <li class="drop-down"><a href="">Our Work</a>
+                    <li class="active drop-down"><a href="">Our Work</a>
                         <ul>
                             <li><a href="projects.html">Projects</a></li>
                             <li><a href="event.html">Events </a></li>
                             <li><a href="workshop.html">Workshops </a></li>
                             <li><a href="pahal.html">Pahal </a></li>
                             <li><a href="diy.html">DIY Projects </a></li>
-                            <li><a href="nithvr.html">NITH VR</a></li>
+                            <li class="active"><a href="nithvr.html">NITH VR</a></li>
                         </ul>
                     </li>
                     <li class="drop-down"><a href="#">Games</a>
