--- a/pahal.html
+++ b/pahal.html
@@ -116,7 +116,7 @@
 
             <nav class="main-nav float-right d-none d-lg-block">
                 <ul>
-                    <li class="active"><a href="index.html#intro">Home</a></li>
+                    <li><a href="index.html#intro">Home</a></li>
                     <li><a href="index.html#about">About Us</a></li>
                     <li class="drop-down"><a href="team.html">Our Team</a>
                         <ul>
@@ -125,12 +125,12 @@
                             <li><a href="alumni.html">Alumni</a></li>
                         </ul>
                     </li>
-                    <li class="drop-down"><a href="projects.html">Our Work</a>
+                    <li class="active drop-down"><a href="projects.html">Our Work</a>
                         <ul>
                             <li><a href="projects.html">Projects</a></li>
                             <li><a href="event.html">Events </a></li>
                             <li><a href="workshop.html">Workshops </a></li>
-                            <li><a href="pahal.html">Pahal </a></li>
+                            <li class="active"><a href="pahal.html">Pahal </a></li>
                             <li><a href="diy.html">DIY Projects </a></li>
                             <li><a href="nithvr.html">NITH VR</a></li>
                         </ul>
