--- a/projects.html
+++ b/projects.html
@@ -105,7 +105,7 @@
 
             <nav class="main-nav float-right d-none d-lg-block">
                 <ul>
-                    <li class="active"><a href="index.html#intro">Home</a></li>
+                    <li><a href="index.html#intro">Home</a></li>
                     <li><a href="index.html#about">About Us</a></li>
                     <li class="drop-down"><a href="team.html">Our Team</a>
                         <ul>
@@ -114,9 +114,9 @@
                             <li><a href="alumni.html">Alumni</a></li>
                         </ul>
                     </li>
-                    <li class="drop-down"><a href="projects.html">Our Work</a>
+                    <li class="active drop-down"><a href="projects.html">Our Work</a>
                         <ul>
-                            <li><a href="#">Projects</a></li>
+                            <li class="active"><a href="#">Projects</a></li>
                             <li><a href="event.html">Events </a></li>
                             <li><a href="workshop.html">Workshops </a></li>
                             <li><a href="pahal.html">Pahal </a></li>
