--- a/projects.html
+++ b/projects.html
@@ -164,7 +164,7 @@
                         <li data-filter=".filter-ar">AR</li>
 
                         <li data-filter=".filter-es">Embedded Systems</li>
-                        <li data-filter=".filter-dsp">Digital Signal Processing</li>
+                        <li data-filter=".filter-dsp">DSP</li>
 
                     </ul>
                 </div>
@@ -657,7 +657,7 @@
                     </article>
                 </div>  
                 <div class="col-md-6 col-lg-4 col-sm-12 col-xs-12 portfolio-item filter-es">
-                    <article class="itembox material-card Brown">
+                    <article class="itembox material-card Blue-Grey">
                         <h2>
                             <span>Auto Cart</span>
                             <strong>
