Project domain corrected

--- a/projects.html
+++ b/projects.html
@@ -501,7 +501,7 @@
                     </article>
                 </div>
                 <div class="col-md-6 col-lg-4 col-sm-12 col-xs-12 portfolio-item filter-Ai-ml">
-                    <article class="itembox material-card Blue-Grey">
+                    <article class="itembox material-card Grey">
                         <h2>
                             <span>Circuit Solver</span>
                             <strong>
@@ -595,7 +595,8 @@
                     </article>
                 </div>  
                 <div class="col-md-6 col-lg-4 col-sm-12 col-xs-12 portfolio-item filter-Ai-ml">
-                    <article class="itembox material-card Teal">
+
+                    <article class="itembox material-card Grey">
                         <h2>
                             <span>E-Exhibition</span>
                             <strong>
@@ -625,8 +626,9 @@
                         </div>
                     </article>
                 </div>
-                <div class="col-md-6 col-lg-4 col-sm-12 col-xs-12 portfolio-item filter-iot filter-Ai-ml">
-                    <article class="itembox material-card Teal">
+                <div class="col-md-6 col-lg-4 col-sm-12 col-xs-12 portfolio-item  filter-es">
+                    <article class="itembox material-card Blue-Grey"> <article class="itembox material-card Blue-Grey">
+                   
                         <h2>
                             <span>Automatic Covid Gateway</span>
                             <strong>
