--- a/event.html
+++ b/event.html
@@ -254,7 +254,13 @@
                                     Tie Breaker: Logic Based Puzzle
                                     <br> A logic based puzzle will be given to solve.
                                 </li>
-
+                                <br>
+                                This event has finished and The winner of this event is
+                                <ol>
+                                    <li>Shubham Rajesh</li>
+                                    <li>Prateek Agarwal</li>
+                                    <li>Shruti Joshi</li>
+                                </ol>
 
                             </ul>
 
@@ -294,6 +300,13 @@
                                 <li>
                                     Round 3: Social Media Hunt<br> Participants will have to find components on social media using the hints provided and perform the given task in the minimum time.
                                 </li>
+                                <br>
+                                This event has finished and The winner of this event is
+                                <ol>
+                                    <li>Shubham Rajesh</li>
+                                    <li>Prateek Agarwal</li>
+                                    <li>Shruti Joshi</li>
+                                </ol>
                                 <p>
                                     
                                 </p>
@@ -336,6 +349,13 @@
                                     Round 3: Instant Innovation
                                     <br> Instant Innovation, in a nutshell, means raising start-up from the news. It will provide the contestants an opportunity to think about how to find a problem, ideate its solution, and pitch.
                                 </li>
+                                <br>
+                                This event has finished and The winner of this event is
+                                <ol>
+                                    <li>Shubham Rajesh</li>
+                                    <li>Prateek Agarwal</li>
+                                    <li>Shruti Joshi</li>
+                                </ol>
                                 <p>
                                     
                                 </p>
