added winners names V2

--- a/event.html
+++ b/event.html
@@ -303,9 +303,9 @@
                                 <br>
                                 This event has finished and The winner of this event is
                                 <ol>
-                                    <li>Shubham Rajesh</li>
-                                    <li>Prateek Agarwal</li>
-                                    <li>Shruti Joshi</li>
+                                    <li>Shubham Gupta</li>
+                                    <li>Ramya Kathal</li>
+                                    <li>Akhilesh Mehra and Purvang Acharya</li>
                                 </ol>
                                 <p>
                                     
@@ -352,9 +352,9 @@
                                 <br>
                                 This event has finished and The winner of this event is
                                 <ol>
-                                    <li>Shubham Rajesh</li>
-                                    <li>Prateek Agarwal</li>
-                                    <li>Shruti Joshi</li>
+                                    <li>Akshat Jain</li>
+                                    <li>Ishan Agarwal</li>
+                                    <li>Prakhar Rathore</li>
                                 </ol>
                                 <p>
                                     
