added winners names V3

--- a/event.html
+++ b/event.html
@@ -255,7 +255,7 @@
                                     <br> A logic based puzzle will be given to solve.
                                 </li>
                                 <br>
-                                This event has finished and The winner of this event is
+                                This event has finished and The winners of this event is
                                 <ol>
                                     <li>Shubham Rajesh</li>
                                     <li>Prateek Agarwal</li>
@@ -301,7 +301,7 @@
                                     Round 3: Social Media Hunt<br> Participants will have to find components on social media using the hints provided and perform the given task in the minimum time.
                                 </li>
                                 <br>
-                                This event has finished and The winner of this event is
+                                This event has finished and The winners of this event is
                                 <ol>
                                     <li>Shubham Gupta</li>
                                     <li>Ramya Kathal</li>
@@ -350,7 +350,7 @@
                                     <br> Instant Innovation, in a nutshell, means raising start-up from the news. It will provide the contestants an opportunity to think about how to find a problem, ideate its solution, and pitch.
                                 </li>
                                 <br>
-                                This event has finished and The winner of this event is
+                                This event has finished and The winners of this event is
                                 <ol>
                                     <li>Akshat Jain</li>
                                     <li>Ishan Agarwal</li>
